# PhotoSynthesis

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Version.h
src/assets/: init.pspreset
src/presets/: morphPad.pspreset  perlin noise.pspreset  rainbowPad.pspreset
